# sg_sound

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  supergoonSoundConfig.cmake.in
src/SupergoonSound/: gnpch.h  main.c
src/SupergoonSound/base/: point.h  queue.c  queue.h  stack.c  stack.h  vector.c  vector.h  vector2.c  vector2.h
src/SupergoonSound/include/: sound.h
src/SupergoonSound/sound/: alhelpers.c  alhelpers.h  openal.c  openal.h  sound.c  sound.h  stb_vorbis.h
